mini-proj1/deployment_order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-1.0
  namespace: order
spec:
  selector:
    matchLabels:
      app: order
      version: "1.0"
  template:
    metadata:
      labels:
        app: order
        version: "1.0"
    spec:
      containers:
      - name: order
        image: yoonjeong/snackbar-order:1.0
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
