mini-proj1/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-app
  namespace: order
spec:
  type: NodePort
  selector:
    app: order
  ports:
  - port: 80
    targetPort: 8080


---


apiVersion: v1
kind: Service
metadata:
  name: payment-app
  namespace: payment
spec:
  type: NodePort
  selector:
    app: payment
    version: "1.0"
  ports:
  - port: 80
    targetPort: 8080


---


apiVersion: v1
kind: Service
metadata:
  name: delivery-app
  namespace: delivery
spec:
  type: NodePort
  selector:
    app: delivery
    version: "1.0"
  ports:
  - port: 80
    targetPort: 8080
